--- a/app/src/main/res/layout/activity_route.xml
+++ b/app/src/main/res/layout/activity_route.xml
@@ -6,8 +6,6 @@
     android:layout_height="match_parent"
     tools:context="com.example.jason.route_application_kotlin.features.route.RouteActivity">
 
-    <include android:id="@+id/loadingScreen" layout="@layout/loading_screen"/>
-
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -85,7 +83,7 @@
             android:layout_marginLeft="8dp"/>
 
         <TextView
-            android:id="@+id/estimatedRouteCompletedTimeTextView"
+            android:id="@+id/routeEndTimeTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
